fix socials gap

--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -4,13 +4,14 @@
   width: 106px;
 
   display: flex;
-  gap: 15px;
+  gap: 26px;
   flex-wrap: wrap;
 
   list-style: none;
 
   @include vp-1023 {
     width: 87px;
+    gap: 17px;
   }
 }
 
